--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
 </section>
 
 <!-- Main Content -->
-<section class="container mx-auto">
+<section class="container mx-auto md:px-4 lg:px-20">
   <h1
     class="uppercase text-center text-4xl grid mt-20 mb-12 items-center gap-8 tracking-widest latest"
   >
@@ -263,4 +263,6 @@
   </div>
 </section>
 <!-- *ngIf="showModal" for detecting memory leaks -->
-<app-auth-modal></app-auth-modal>
+<app-auth-modal
+  *ngIf="!(auth.isAuthenticatedWithDelay$ | async)"
+></app-auth-modal>
