--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,8 @@
 <!-- Header -->
 <header id="header" class="bg-secondary">
-  <nav class="container mx-auto flex justify-start items-center py-8 px-4">
+  <nav
+    class="container mx-auto flex justify-start items-center py-8 px-4 lg:px-20"
+  >
     <!-- App Name -->
     <a
       class="text-3xl text-indigo-400 font-bold uppercase mr-4"
@@ -23,6 +25,9 @@
           </li>
           <li>
             <a class="px-2" href="#">Upload</a>
+          </li>
+          <li>
+            <a class="px-2" href="#" (click)="logout($event)">Logout</a>
           </li>
         </ng-template>
         <li>
