--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -23,6 +23,12 @@
   <p *ngIf="control.errors?.email" class="text-red-400">
     You must enter a valid Email.
   </p>
-  <p *ngIf="control.errors?.min" class="text-red-400">Value to low.</p>
-  <p *ngIf="control.errors?.max" class="text-red-400">Value to max.</p>
+  <p *ngIf="control.errors?.min" class="text-red-400">Value too low.</p>
+  <p *ngIf="control.errors?.max" class="text-red-400">Value too high.</p>
+  <p *ngIf="control.errors?.noMatch" class="text-red-400">
+    Passwords dont match.
+  </p>
+  <p *ngIf="control.errors?.alreadyExist" class="text-red-400">
+    Email already exist.
+  </p>
 </ng-container>
