--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,8 +5,10 @@
   >
     <!-- App Name -->
     <a
-      class="text-3xl text-indigo-400 font-bold uppercase mr-4"
-      href="index.html"
+      class="text-3xl text-indigo-200 font-bold uppercase mr-4"
+      routerLink="/"
+      routerLinkActive="text-indigo-400"
+      [routerLinkActiveOptions]="{ exact: true }"
       >Clipz</a
     >
 
@@ -21,17 +23,33 @@
         </li>
         <ng-template #authLinks>
           <li>
-            <a class="px-2" href="#">Manage</a>
+            <a
+              class="px-2"
+              routerLink="/manage"
+              routerLinkActive="text-indigo-400 "
+              [routerLinkActiveOptions]="{ exact: true }"
+              [queryParams]="{ sort: '1' }"
+              >Manage</a
+            >
           </li>
           <li>
-            <a class="px-2" href="#">Upload</a>
+            <a
+              class="px-2"
+              routerLink="/upload"
+              routerLinkActive="text-indigo-400 "
+              [routerLinkActiveOptions]="{ exact: true }"
+              href="#"
+              >Upload</a
+            >
           </li>
           <li>
-            <a class="px-2" href="#" (click)="logout($event)">Logout</a>
+            <a class="px-2" href="#" (click)="auth.logout($event)">Logout</a>
           </li>
         </ng-template>
         <li>
-          <a class="px-2" href="about.html">About</a>
+          <a class="px-2" routerLink="about" routerLinkActive="text-indigo-400 "
+            >About</a
+          >
         </li>
       </ul>
       <!-- Language Switcher -->
